src/test/ui/issues/issue-38919.stderr
error[E0599]: no associated item named `Item` found for type `T` in the current scope
  --> $DIR/issue-38919.rs:2:8
   |
LL |     T::Item;
   |        ^^^^ associated item not found in `T`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
